<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_dino_icon">Ikon Emosi</string>
    <string name="info_dinofam_name">Nama Family</string>
    <string name="info_dino_desc">Deskripsi</string>
    <string name="info_dino_periode">Periode Hidup</string>
    <string name="info_dino_characteristic">Karakteristik Fisik</string>
    <string name="info_dino_habitat">Habitat dan Lingkungan</string>
    <string name="info_dino_lingkungan">Lingkungan</string>
    <string name="info_dino_perilaku">Perilaku</string>
    <string name="info_dino_klasifikasi">Klasifikasi</string>
    <string name="daftar_dinosaurus">Daftar Dinosaurus</string>
    <string name="desc">Aplikasi ini merupakan aplikasi yang dibangun selama ujian praktikum mata kuliah PAM. Saya menikmati proses pengerjaannya dan sedikit menyesal karena tidak sempat menyelesaikan pembangunan aplikasi ini. Semoga saya tetap mendapatkan nilai. Terima kasih kepada bapak dan ibu pengajar, salam.</string>
    <string name="nama">Emely Angelica Lestari</string>
    <string name="picpro">emely.png</string>
    <string name="contoh">Contoh Gambar</string>

    <string-array name="dinofams_name">
        <item>Tyrannosauridae</item>
        <item>Sauropoda</item>
        <item>Stegosauridae</item>
        <item>Ceratopsia</item>
        <item>Hadrosauridae</item>
        <item>Ankylosauridae</item>
        <item>Theropoda</item>
        <item>Sauropodomorpha</item>
    </string-array>

    <string-array name="dinos_icon">
        <item>@drawable/_1</item>
        <item>@drawable/_2</item>
        <item>@drawable/_3</item>
        <item>@drawable/_4</item>
        <item>@drawable/_5</item>
        <item>@drawable/_6</item>
        <item>@drawable/_7</item>
        <item>@drawable/_8</item>
    </string-array>

    <string-array name="dinos_description">
        <item>Raja predator ganas dengan rahang kuat dan gigi tajam. Berjalan dengan dua kaki, menerkam mangsanya dengan cakar tajam. Lengan pendeknya tak sebanding dengan kekuatan rahangnya.</item>
        <item>Raksasa herbivora berleher panjang, menjelajah hutan purba. Berjalan dengan empat kaki kokoh, menjangkau pucuk pohon tinggi. Tubuh besarnya mencerminkan kekuatan dan keanggunannya.</item>
        <item>Dinosaurus herbivora berlapis baja, aman dari predator. Punggungnya dihiasi pelat tulang, ekornya berduri tajam. Berjalan dengan empat kaki, memakan tanaman dengan paruh kecilnya.</item>
        <item>Dinosaurus herbivora bertanduk, siap melawan predator. Tanduk di wajahnya menjadi senjata dan pelindung. Paruhnya yang kuat memungkinkannya memakan berbagai tanaman.</item>
        <item>Dinosaurus herbivora berparuh bebek, unik dan menarik. Berjalan dengan dua kaki, jambul di kepalanya menandakan identitasnya. Paruhnya yang seperti bebek memungkinkannya menyaring makanan dari air.</item>
        <item>Dinosaurus herbivora berlapis baja, tak terkalahkan. Tubuhnya terbungkus armor tebal, ekornya menjadi gada mematikan. Berjalan dengan empat kaki, memakan tanaman dengan paruhnya yang kecil.</item>
        <item>Karnivora gesit dengan berbagai bentuk dan ukuran. Berjalan dengan dua kaki, berburu mangsanya dengan kecepatan tinggi. Beberapa spesies memiliki bulu, menunjukkan evolusi menuju burung.</item>
        <item>Raksasa herbivora berleher panjang, nenek moyang sauropoda. Berjalan dengan empat kaki, menjelajahi habitatnya dengan tenang. Memiliki berbagai ukuran dan bentuk, menunjukkan keragaman evolusi.</item>
    </string-array>

    <string-array name="dinos_periode">
        <item>Kapur Akhir (99-66 juta tahun lalu)</item>
        <item>Jura Akhir - Kapur Akhir (157-66 juta tahun lalu)</item>
        <item>Jura Akhir - Kapur Awal (157-100 juta tahun lalu)</item>
        <item>Kapur Akhir (99-66 juta tahun lalu)</item>
        <item>Kapur Akhir (99-66 juta tahun lalu)</item>
        <item>Kapur Awal - Kapur Akhir (125-66 juta tahun lalu)</item>
        <item>Trias Akhir - Kapur Akhir (230-66 juta tahun lalu)</item>
        <item>Trias Akhir - Kapur Akhir (230-66 juta tahun lalu)</item>
    </string-array>

    <string-array name="dinos_characteristic">
        <item>Karnivora besar berahang kuat, bergigi tajam, berkaki dua, berlengan pendek dua jari, berlari cepat, penglihatan dan pendengaran tajam.</item>
        <item>Herbivora berleher dan berekor panjang, berkaki empat, bertubuh besar dan kuat, berleher panjang untuk mencapai pucuk pohon, berekor panjang untuk keseimbangan.</item>
        <item>Herbivora berpelat tulang di punggung, berkaki empat, berekor panjang berduri, berotak kecil, bergerak lambat.</item>
        <item>Herbivora bertanduk di wajah, berkaki empat, berparuh untuk makan tanaman, bertanduk untuk pertahanan dan pertunjukan, penglihatan dan pendengaran tajam.</item>
        <item>Herbivora berparuh bebek, berkaki dua, berjambul di kepala, berparuh untuk menyaring makanan dari air, pandai berenang.</item>
        <item>Herbivora berlapis baja, berkaki empat, berekor kuat untuk pertahanan, berotak kecil, bergerak lambat.</item>
        <item>Karnivora dengan berbagai ukuran dan bentuk, berkaki dua, berbulu (pada beberapa spesies), berlari cepat, burung modern adalah keturunannya.</item>
        <item>Herbivora berleher panjang, berkaki empat, memiliki berbagai ukuran dan bentuk, berleher panjang untuk mencapai pucuk pohon, berekor panjang untuk keseimbangan.</item>
    </string-array>

    <string-array name="dinos_habitat">
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan dan dataran.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Beragam, tergantung spesies.</item>
        <item>Hutan dan dataran.</item>
    </string-array>

    <string-array name="dinos_lingkungan">
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan dan dataran.</item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Hutan, dataran, dan tepi sungai.></item>
        <item>Hutan, dataran, dan tepi sungai.</item>
        <item>Beragam, tergantung spesies.</item>
        <item>Hutan dan dataran.</item>
    </string-array>

    <string-array name="dinos_perilaku">
        <item>Karnivora ganas, berburu mangsa dalam kelompok kecil, menggunakan rahang dan gigi kuat untuk membunuh mangsanya.</item>
        <item>Herbivora, memakan tumbuhan tinggi, hidup dalam kelompok besar untuk perlindungan.</item>
        <item>Herbivora, memakan tumbuhan rendah, menggunakan pelat tulang dan duri ekor untuk pertahanan.</item>
        <item>Herbivora, memakan tumbuhan, menggunakan tanduk untuk pertahanan dan pertunjukan.</item>
        <item>Herbivora, memakan tumbuhan air, hidup dalam kelompok besar.</item>
        <item>Herbivora, memakan tumbuhan rendah, menggunakan armor dan ekor gada untuk pertahanan.</item>
        <item>Karnivora dan omnivora, berburu mangsa, beberapa spesies memiliki bulu.</item>
        <item>Herbivora, memakan tumbuhan tinggi, hidup dalam kelompok besar.</item>
    </string-array>

    <string-array name="dinos_klasifikasi">
        <item>
    Kelas: Dinosauria
    Ordo: Saurischia
    Subordo: Theropoda
    Famili: Tyrannosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Saurischia
    Subordo: Sauropoda
    Famili: Brachiosauridae, Diplodocidae, Apatosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Ornithischia
    Subordo: Thyreophora
    Famili: Stegosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Ornithischia
    Subordo: Ceratopsia
    Famili: Ceratopsidae, Centrosaurinae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Ornithischia
    Subordo: Hadrosauroidea
    Famili: Hadrosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Ornithischia
    Subordo: Thyreophora
    Famili: Ankylosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Saurischia
    Subordo: Theropoda
    Famili: Tyrannosauridae, Velociraptoridae, Dromaeosauridae
        </item>
        <item>
    Kelas: Dinosauria
    Ordo: Saurischia
    Subordo: Sauropoda
    Famili: Sauropodidae, Titanosauridae
        </item>
    </string-array>
</resources>